# saas-starter

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  pyproject.toml  railway.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/src/app/: __init__.py  api.py  main.py  models.py
api/src/app/area/: models.py  routes.py  schemas.py  service.py
api/src/app/auth/: cookies.py  dependencies.py  jwt.py  models.py  password.py  routes.py  schemas.py  service.py
api/src/app/auth/magic_link/: routes.py  schemas.py  service.py
api/src/app/auth/oauth/: client.py  models.py  redis.py  routes.py  services.py
api/src/app/core/: config.py  database.py  errors.py  exceptions.py  lifespan.py  lookups.py  middleware.py  models.py  redis.py  storage.py
api/src/app/email/: client.py  templates.py
api/src/app/household/: dependencies.py  models.py  routes.py  schemas.py  service.py
api/src/app/organization/: routes.py  schemas.py  service.py
api/src/app/project/: models.py  routes.py  schemas.py
api/src/app/sync/: routes.py
api/src/app/task/: models.py  routes.py  schemas.py
api/src/app/upload/: routes.py
api/tests/: conftest.py  test_auth.py  test_household.py  test_magic_link.py  test_sync.py  test_tasks.py
web/: Dockerfile  package.json
web/src/app/: layout.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/signup/: page.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/(marketing)/about/: page.tsx
web/src/app/(marketing)/pricing/: page.tsx
web/src/app/oauth/callback/: page.tsx
web/src/lib/: api.ts  auth.ts
